02_package_training_job fonctionne enfin sans warning etc.

--- a/08_deployment/06_MLFlow_Projects/02_package_training_job/requirements.txt
+++ b/08_deployment/06_MLFlow_Projects/02_package_training_job/requirements.txt
@@ -1,10 +1,10 @@
 pandas 
 # gunicorn 
-streamlit 
-# scikit-learn 
+# streamlit 
+scikit-learn==1.4.2 
 # matplotlib 
 # seaborn 
 # plotly
 boto3
-mlflow
+mlflow==2.13.1
 psycopg2-binary
